--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Alan Vieceli",
   "license": "ISC",
   "dependencies": {
+    "consign": "^0.1.6",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
     "mysql": "^2.17.1"
