--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Alan Vieceli",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "consign": "^0.1.6",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
